# core

./: CONTRIBUTING.md  Cargo.toml  Justfile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
crates/ai/: Cargo.toml
crates/ai/src/: README.md  chunk.rs  document.rs  element.rs  error.rs  lib.rs  loc.rs  processors.rs  tag.rs  traits.rs
crates/ai/src/chunk/: _markdown.rs  recursive.rs  simple.rs  string.rs
crates/ai/src/processors/: simple_splitter.rs
examples/demo/: Cargo.toml
examples/demo/src/: main.rs  processors.rs
