[package]
name = "ragkit-ai"
description = "Rusty tools for AI"
authors = ["Ragkit <hi@ragkit.com>"]
version = "0.0.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/ragkit-ai/latest/ragkit-ai/"
repository = "https://github.com/ragkit/core"
homepage = "https://github.com/ragkit/core"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[lib]
path = "src/lib.rs"
