[package]
name = "ragkit-ai"
description = "Rusty tools for AI"
authors = ["Ragkit <hi@ragkit.com>"]
version = "0.0.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/ragkit-ai/latest/ragkit-ai/"
repository = "https://github.com/ragkit/core"
homepage = "https://github.com/ragkit/core"

[dependencies]
anyhow = { workspace = true }
derive_builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lib]
path = "src/lib.rs"
